beginn implementation with socket